# Web_Scraping_Projects

./: .gitignore  1_clinic_data.ipynb  2_download_image.ipynb  2_youtube_views.ipynb  4_youtube_views.ipynb  README.md  processed_tweets.parquet  pyproject.toml  requirements.txt  youtube_views.csv
data/: processed_tweets.parquet
web_project0/: 1_clinic_data.ipynb  2_download_image.ipynb  2_youtube_views.ipynb  4_youtube_views.ipynb
web_project1/: .pre-commit-config.yaml  README.md  data.py  main.py  pyproject.toml  requirements.txt
web_project1/src/: main.py  test.py
web_project1/src/analysis/: analyzer.py
web_project1/src/collection/: collector.py
web_project1/src/processing/: processor.py
