[project]
name = "web-scraping-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "ntscraper>=0.4.0",
    "pandas>=2.3.2",
    "pre-commit>=4.3.0",
    "pyarrow>=21.0.0",
    "ruff>=0.12.11",
    "scikit-learn>=1.7.1",
]
