[project]
name = "twitter-stock-analysis"
version = "0.1.0"
requires-python = ">=3.9"

[tool.ruff]
line-length = 88
target-version = "py39"
src = ["web_project1"]
exclude = [
    ".git",
    ".ruff_cache",
    "__pycache__",
    "*.pyc",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
